fixed dark mode, added background ani, added posts

--- a/styles/code-blocks.css
+++ b/styles/code-blocks.css
@@ -14,8 +14,12 @@ p {
   @apply py-2
 }
 
-blockquote {
+/* blockquote {
   @apply px-4 py-2 my-4 border-l-4 border-gray-300 bg-gray-50 dark:border-gray-500 dark:bg-gray-800
+} */
+
+blockquote {
+  @apply px-4 py-2 my-4 border-l-4 border-gray-700 bg-gray-900 text-gray-200 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-300;
 }
 
 hr {
